fix: lambda表达式最后的toList()返回的是不可变List，会导致kryo序列化异常